fix z-index bug

--- a/less/alert.less
+++ b/less/alert.less
@@ -24,6 +24,7 @@
     font-size: 16px;
     -webkit-animation: fadeIn .2s both;
     animation: fadeIn .2s both;
+    z-index: 9998;
     .alert-box {
         position: absolute;
         top: 50%;
@@ -36,6 +37,7 @@
         
         background-color: white;
         border-radius: 12.5px;
+        z-index: 9999;
         .alert-msg-container {
             height: 80px;
             border-bottom: 1px solid #e5e5e5;
